Regeneration code