@@ -1,6 +1,11 @@
 
 package power.powerdimensions.world.biome;
 
+import power.powerdimensions.world.features.treedecorators.OblivionForestTrunkDecorator;
+import power.powerdimensions.world.features.treedecorators.OblivionForestLeaveDecorator;
+import power.powerdimensions.world.features.treedecorators.OblivionForestFruitDecorator;
+import power.powerdimensions.init.PowerDimensionsModBlocks;
+
 import net.minecraft.world.level.levelgen.placement.SurfaceWaterDepthFilter;
 import net.minecraft.world.level.levelgen.placement.NoiseThresholdCountPlacement;
 import net.minecraft.world.level.levelgen.placement.InSquarePlacement;
@@ -28,20 +33,27 @@ import net.minecraft.data.worldgen.BiomeDefaultFeatures;
 
 import java.util.List;
 
+import com.google.common.collect.ImmutableList;
+
 public class OblivionForestBiome {
 	public static Biome createBiome() {
 		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(-16764109).waterColor(-16764109).waterFogColor(-16764109)
 				.skyColor(-16764109).foliageColorOverride(-16777216).grassColorOverride(-16777216).build();
 		BiomeGenerationSettings.Builder biomeGenerationSettings = new BiomeGenerationSettings.Builder();
-		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, PlacementUtils.register(
-				"power_dimensions:tree_oblivion_forest",
-				FeatureUtils.register("power_dimensions:tree_oblivion_forest", Feature.TREE,
-						new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(Blocks.OAK_LOG.defaultBlockState()),
-								new StraightTrunkPlacer(4, 2, 0), BlockStateProvider.simple(Blocks.OAK_LEAVES.defaultBlockState()),
-								new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1)).ignoreVines()
-								.build()),
-				List.of(CountPlacement.of(4), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
-						PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
+		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
+				PlacementUtils.register("power_dimensions:tree_oblivion_forest",
+						FeatureUtils.register("power_dimensions:tree_oblivion_forest", Feature.TREE,
+								new TreeConfiguration.TreeConfigurationBuilder(
+										BlockStateProvider.simple(PowerDimensionsModBlocks.CRYSTAL_BROWN.get().defaultBlockState()),
+										new StraightTrunkPlacer(7, 2, 0),
+										BlockStateProvider.simple(PowerDimensionsModBlocks.CRYSTAL_GREEN.get().defaultBlockState()),
+										new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1))
+										.decorators(ImmutableList.of(OblivionForestLeaveDecorator.INSTANCE, OblivionForestTrunkDecorator.INSTANCE,
+												OblivionForestFruitDecorator.INSTANCE))
+										.build()),
+						List.of(CountPlacement.of(4), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
+								PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING),
+								BiomeFilter.biome())));
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
 				PlacementUtils.register("power_dimensions:grass_oblivion_forest", VegetationFeatures.PATCH_GRASS,
 						List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 4), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE,
